--- a/stage-zero/package.json
+++ b/stage-zero/package.json
@@ -1,6 +1,10 @@
 {
   "name": "stage-zero-public-api",
   "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node api/index.js"
+  },
   "keywords": [],
   "author": "Joy Ibe",
   "license": "ISC",
