--- a/stage-zero/package.json
+++ b/stage-zero/package.json
@@ -6,7 +6,7 @@
     "start": "node api/index.js"
   },
   "keywords": [],
-  "author": "Joy Ibe",
+  "author": "Joy",
   "license": "ISC",
   "description": "",
   "dependencies": {
