--- a/stage-zero/package.json
+++ b/stage-zero/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node api/index.js"
   },
   "keywords": [],
-  "author": "Joy",
+  "author": "Joy Ibe",
   "license": "ISC",
   "description": "",
   "dependencies": {
